--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
             flex-direction: column;
             gap: 25px;
             width: 100%;
-            max-width: 350px; /* 限制最大寬度，避免在平板上太寬 */
+            max-width: 350px;
         }
 
         .big-btn {
             background-color: var(--card-bg);
             border-radius: 20px;
-            height: 120px; /* 固定高度，增加觸控面積 */
+            height: 120px;
             display: flex;
             align-items: center;
-            justify-content: center; /* 內容完全置中 */
+            justify-content: center;
             cursor: pointer;
             text-decoration: none;
             color: white;
@@ -64,7 +64,7 @@
             background-color: #2c2c2e;
         }
 
-        /* 左側色條 (保留用來區分功能，但做得更細緻) */
+        /* 左側裝飾色條 */
         .big-btn::before {
             content: '';
             position: absolute;
@@ -80,7 +80,7 @@
         .text-group {
             display: flex;
             flex-direction: column;
-            align-items: center; /* 文字置中 */
+            align-items: center;
             text-align: center;
         }
 
@@ -95,11 +95,6 @@
             font-size: 0.8rem;
             color: #888;
             font-weight: 400;
-        }
-
-        /* 隱藏除錯資訊，保持介面乾淨 */
-        #debug-info {
-            display: none; 
         }
     </style>
 </head>
@@ -122,34 +117,48 @@
     </div>
 
     <script>
-        // 裝置偵測
+        // 1. Service Worker 註冊 (觸發 PWA 安裝提示的關鍵)
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./service-worker.js')
+                    .then(reg => console.log('SW 註冊成功:', reg))
+                    .catch(err => console.log('SW 註冊失敗:', err));
+            });
+        }
+
+        // 2. 裝置偵測
         const userAgent = navigator.userAgent || navigator.vendor || window.opera;
         const isAndroid = /android/i.test(userAgent);
         const isIOS = /iPad|iPhone|iPod/.test(userAgent) && !window.MSStream;
 
-        // 導航回家
+        // 3. 導航回家功能
         function goHome() {
             if (isIOS) {
+                // iOS Scheme: 開啟 Google Maps 導航回家
                 window.location.href = "comgooglemaps://?daddr=Home&directionsmode=driving";
+                // 失敗備案
                 setTimeout(() => { window.location.href = "https://www.google.com/maps/dir/?api=1&destination=Home&travelmode=driving"; }, 2000);
             } else if (isAndroid) {
+                // Android Intent
                 window.location.href = "intent://#Intent;scheme=google.navigation;package=com.google.android.apps.maps;S.q=Home;end";
             } else {
                 window.location.href = "https://www.google.com/maps/dir/?api=1&destination=Home&travelmode=driving";
             }
         }
 
-        // 開啟神盾
+        // 4. 開啟神盾功能
         function openOmnie() {
             if (isIOS) {
+                // iOS: 導向 App Store (已安裝會顯示"打開"，未安裝顯示"取得")
                 window.location.href = "https://apps.apple.com/tw/app/id1067644747";
             } else if (isAndroid) {
+                // Android: 使用 Intent 直接開啟 App
                 const packageName = "com.omnie.app";
                 const fallbackUrl = `https://play.google.com/store/apps/details?id=${packageName}`;
                 const intent = `intent://#Intent;scheme=package;package=${packageName};S.browser_fallback_url=${encodeURIComponent(fallbackUrl)};end`;
                 window.location.href = intent;
             } else {
-                alert("請在手機上使用");
+                alert("請在手機上使用此功能");
             }
         }
     </script>
